# virtual-keyboard

./: Makefile.am  README.md  configure.ac  index.html  params.json  virtual-keyboard.desktop
debian/: changelog  control  rules
icons/: Makefile.am
src/: Makefile.am  cmdline.c  main.c
